# QMapperTest

./: CMakeLists.txt  PreguntaRespuesta.cpp  PreguntaRespuesta.h  main.cpp  mapperWindow.cpp  mapperWindow.h  test.csv
